<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_marginBottom="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppTheme.Text"
            android:id="@+id/name"
            tools:text="Name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:text="@string/ui_height"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:text="@string/ui_mass"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:text="@string/ui_hair_color"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:text="@string/ui_skin_color"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:text="@string/ui_eye_color"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:text="@string/ui_birth_year"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:text="@string/ui_gender"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:id="@+id/height"
                    tools:text="Height"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:id="@+id/mass"
                    tools:text="Mass"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:id="@+id/hair_color"
                    tools:text="Hair color"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:id="@+id/skin_color"
                    tools:text="Skin color"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:id="@+id/eye_color"
                    tools:text="Eye color"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:id="@+id/birth_year"
                    tools:text="Birth year"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text"
                    android:id="@+id/gender"
                    tools:text="Gender"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>